feat: Add comprehensive documentation for Rawi CLI, including installation, configuration, command reference, and user guide
- Created detailed guides for building and installing Rawi CLI from source.
- Added prerequisites and quick steps for using Rawi CLI.
- Documented installation and update procedures for various package managers.
- Introduced a section for installing past releases of Rawi CLI.
- Developed command reference documentation for `ask`, `configure`, `history`, and `info` commands.
- Included user guide with examples and best practices for using Rawi CLI.
- Structured documentation to enhance clarity and usability, following consistent formatting conventions.

--- a/src/content/docs/0.0.x/index.mdx
+++ b/src/content/docs/0.0.x/index.mdx
@@ -1,16 +1,23 @@
 ---
 title: Welcome to Rawi (راوي)
-description: Rawi (راوي) is a developer-friendly AI-powered CLI tool that delivers clear answers, summaries, and analyses directly in your terminal. Inspired by the rich Jordanian storytelling tradition, Rawi transforms your command line into an intelligent assistant for your development workflow.
+description: Rawi (راوي) is a developer-friendly AI-powered CLI tool that
+  delivers clear answers, summaries, and analyses directly in your terminal.
+  Inspired by the rich Jordanian storytelling tradition, Rawi transforms your
+  command line into an intelligent assistant for your development workflow.
 template: splash
 hero:
-  tagline: Rawi (راوي) is a developer-friendly AI-powered CLI tool that delivers clear answers, summaries, and analyses directly in your terminal. Inspired by the rich Jordanian storytelling tradition, Rawi transforms your command line into an intelligent assistant for your development workflow.
+  tagline: Rawi (راوي) is a developer-friendly AI-powered CLI tool that delivers
+    clear answers, summaries, and analyses directly in your terminal. Inspired
+    by the rich Jordanian storytelling tradition, Rawi transforms your command
+    line into an intelligent assistant for your development workflow.
   image:
-    file: ../../assets/rawi.png
+    file: ../../../assets/0.0.x/rawi.png
   actions:
     - text: Get Started
       primary: true
-      link: /userguide
+      link: /0.0.x/userguide
       icon: right-arrow
+slug: 0.0.x
 ---
 
 import {Card, CardGrid} from '@astrojs/starlight/components';
@@ -19,20 +26,16 @@ import {Card, CardGrid} from '@astrojs/starlight/components';
 
 Rawi (راوي) is a unified, developer-friendly AI-powered CLI tool that provides a consistent interface for interacting with your development workflow. Rawi delivers clear answers, summaries, and analyses directly in your terminal, inspired by the rich Jordanian storytelling tradition.
 
----
+***
 
 ## Latest version
 
 <CardGrid>
   <Card title="User Guide" href="/userguide" icon="open-book">
-
     Explore the user guide to learn how to use Rawi (راوي) effectively in your development workflow.
-
   </Card>
 
   <Card title="Command Reference" href="/usage/commands" icon="document">
-
     Access the command reference for detailed information on Rawi (راوي) commands and their usage.
-
   </Card>
 </CardGrid>
