--- a/src/content/docs/0.0.x/getting-started/version.mdx
+++ b/src/content/docs/0.0.x/getting-started/version.mdx
@@ -5,7 +5,10 @@ description: Welcome to the comprehensive documentation for Rawi (راوي), a
 slug: 0.0.x/getting-started/version
 ---
 
+import Clarity from '../@/components/clarity.astro';
 import {Tabs, TabItem, Steps} from '@astrojs/starlight/components';
+
+<Clarity />
 
 # Installing Past Releases of Rawi CLI
 
@@ -13,9 +16,9 @@ This topic describes how to install previous releases of the Rawi Command Line I
 
 ## System Requirements
 
-* **Node.js**: 18.0.0 or higher
-* **Package Manager**: npm, pnpm, or yarn
-* **Operating System**: Windows, macOS, or Linux
+- **Node.js**: 18.0.0 or higher
+- **Package Manager**: npm, pnpm, or yarn
+- **Operating System**: Windows, macOS, or Linux
 
 ## Installation Instructions
 
@@ -63,6 +66,7 @@ This topic describes how to install previous releases of the Rawi Command Line I
          rawi info
          ```
     </Steps>
+
   </TabItem>
 
   <TabItem label="Windows" icon="seti:windows">
@@ -96,6 +100,7 @@ This topic describes how to install previous releases of the Rawi Command Line I
          rawi info
          ```
     </Steps>
+
   </TabItem>
 </Tabs>
 
@@ -135,6 +140,7 @@ This topic describes how to install previous releases of the Rawi Command Line I
     ```bash
     rawi/0.0.0-beta.12 linux-x64 node-18.20.2
     ```
+
   </TabItem>
 
   <TabItem label="Windows" icon="seti:windows">
@@ -148,6 +154,7 @@ This topic describes how to install previous releases of the Rawi Command Line I
     ```powershell
     rawi/0.0.0-beta.12 win32-x64 node-18.20.2
     ```
+
   </TabItem>
 </Tabs>
 
@@ -160,6 +167,7 @@ This topic describes how to install previous releases of the Rawi Command Line I
     ```bash
     npx rawi@<version> ask "Hello, world!"
     ```
+
   </TabItem>
 
   <TabItem label="pnpm dlx" icon="pnpm">
@@ -168,6 +176,7 @@ This topic describes how to install previous releases of the Rawi Command Line I
     ```bash
     pnpm dlx rawi@<version> configure
     ```
+
   </TabItem>
 </Tabs>
 
@@ -182,11 +191,9 @@ For troubleshooting installation issues, see the [Troubleshooting Guide](./docs/
     ```
   </TabItem>
 
-  <TabItem label="pnpm" icon="pnpm">
-    ```bash
-    pnpm remove -g rawi
-    ```
-  </TabItem>
+<TabItem label="pnpm" icon="pnpm">
+  ```bash pnpm remove -g rawi ```
+</TabItem>
 
   <TabItem label="yarn" icon="seti:yarn">
     ```bash
@@ -195,7 +202,7 @@ For troubleshooting installation issues, see the [Troubleshooting Guide](./docs/
   </TabItem>
 </Tabs>
 
-***
+---
 
 ## Version Management
 
@@ -208,10 +215,11 @@ For troubleshooting installation issues, see the [Troubleshooting Guide](./docs/
       * **MINOR**: New features (backwards compatible)
       * **PATCH**: Bug fixes (backwards compatible)
         For more details, see the [Release Process](./docs/development.md#release-process).
+
   </TabItem>
 </Tabs>
 
-***
+---
 
 ## Example: Checking Installed Version
 
@@ -231,25 +239,21 @@ For troubleshooting installation issues, see the [Troubleshooting Guide](./docs/
   </TabItem>
 </Tabs>
 
-***
+---
 
 ## Additional Resources
 
-* [Rawi Releases on GitHub](https://github.com/MKAbuMattar/rawi/releases)
-* [Troubleshooting Guide](./docs/troubleshooting.md)
-* [Getting Started](./docs/getting-started.md)
-* [Development Guide](./docs/development.md)
+- [Rawi Releases on GitHub](https://github.com/MKAbuMattar/rawi/releases)
+- [Troubleshooting Guide](./docs/troubleshooting.md)
+- [Getting Started](./docs/getting-started.md)
+- [Development Guide](./docs/development.md)
 
-***
+---
 
 ## Troubleshooting
 
 If you encounter issues after installing or uninstalling Rawi CLI, see the [Troubleshooting Guide](./docs/troubleshooting.md) for solutions to common problems such as:
 
-* Command not found errors
-* Version mismatch after upgrade/downgrade
-* Permission issues on macOS/Linux/Windows
-
-***
-
-This documentation is structured to match the clarity and conventions of the AWS CLI documentation, including code blocks, platform-specific notes, and links to further resources. For more advanced installation or version pinning scenarios, refer to your package manager's documentation.Here’s a markdown response for your docs, modeled after the AWS CLI documentation style, specifically for "Installing past releases", but adapted for Rawi and your Astro Starlight docs:
+- Command not found errors
+- Version mismatch after upgrade/downgrade
+- Permission issues on macOS/Linux/Windows
