--- a/src/content/docs/0.0.x/userguide/index..mdx
+++ b/src/content/docs/0.0.x/userguide/index..mdx
@@ -5,12 +5,16 @@ description: Welcome to the comprehensive documentation for Rawi (راوي), a
 slug: 0.0.x/userguide
 ---
 
+import Clarity from '../@/components/clarity.astro';
+
+<Clarity />
+
 # What is the Rawi CLI?
 
 The Rawi Command Line Interface (Rawi CLI) is an open source tool that enables you to interact with multiple AI providers directly from your terminal. With minimal configuration, the Rawi CLI lets you run commands to ask questions, analyze code, manage chat history, and configure AI profiles, right from your command-line shell.
 
-* **Linux shells** – Use common shells such as bash or zsh to run Rawi commands on Linux or macOS.
-* **Windows command line** – On Windows, run Rawi commands in Command Prompt or PowerShell.
+- **Linux shells** – Use common shells such as bash or zsh to run Rawi commands on Linux or macOS.
+- **Windows command line** – On Windows, run Rawi commands in Command Prompt or PowerShell.
 
 All major Rawi features are available through the CLI, including provider configuration, session management, and advanced shell integration. New features are added regularly, and the CLI is designed to provide full access to Rawi’s capabilities as soon as they are available.
 
@@ -35,8 +39,8 @@ For version history and release notes, see the [Releases](https://github.com/MKA
 
 Rawi is open source and community-driven. For support, see:
 
-* [GitHub Issues](https://github.com/MKAbuMattar/rawi/issues)
+- [GitHub Issues](https://github.com/MKAbuMattar/rawi/issues)
 
-***
+---
 
 > Rawi brings the power of AI to your terminal, integrate, automate, and accelerate your workflow with a single CLI tool.
