--- a/src/content/docs/configure/options.mdx
+++ b/src/content/docs/configure/options.mdx
@@ -3,7 +3,10 @@ title: Rawi (راوي) Documentation | Command Line Options
 description: Welcome to the comprehensive documentation for Rawi (راوي), a developer-friendly AI-powered CLI tool for your terminal.
 ---
 
+import Clarity from '@/components/clarity.astro';
 import {Tabs, TabItem, Steps} from '@astrojs/starlight/components';
+
+<Clarity />
 
 # Command Line Options in the Rawi CLI
 
