--- a/src/content/docs/getting-started/getting-started-source-install.mdx
+++ b/src/content/docs/getting-started/getting-started-source-install.mdx
@@ -4,6 +4,9 @@ description: Welcome to the comprehensive documentation for Rawi (راوي), a d
 ---
 
 import {Aside, Tabs, TabItem, Steps} from '@astrojs/starlight/components';
+import Clarity from '@/components/clarity.astro';
+
+<Clarity />
 
 # Building and Installing Rawi CLI from Source
 
