--- a/src/content/docs/getting-started/index..mdx
+++ b/src/content/docs/getting-started/index..mdx
@@ -3,7 +3,10 @@ title: Rawi (راوي) Documentation | Getting Started
 description: Welcome to the comprehensive documentation for Rawi (راوي), a developer-friendly AI-powered CLI tool for your terminal.
 ---
 
+import Clarity from '@/components/clarity.astro';
 import {Steps} from '@astrojs/starlight/components';
+
+<Clarity />
 
 # Prerequisites to Use the Rawi CLI
 
