--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -13,7 +13,10 @@ hero:
       icon: right-arrow
 ---
 
+import Clarity from '@/components/clarity.astro';
 import {Card, CardGrid} from '@astrojs/starlight/components';
+
+<Clarity />
 
 # Rawi (راوي) Command Line Interface Documentation
 
