--- a/src/content/docs/0.0.x/index.mdx
+++ b/src/content/docs/0.0.x/index.mdx
@@ -20,13 +20,16 @@ hero:
 slug: 0.0.x
 ---
 
+import Clarity from '../@/components/clarity.astro';
 import {Card, CardGrid} from '@astrojs/starlight/components';
+
+<Clarity />
 
 # Rawi (راوي) Command Line Interface Documentation
 
 Rawi (راوي) is a unified, developer-friendly AI-powered CLI tool that provides a consistent interface for interacting with your development workflow. Rawi delivers clear answers, summaries, and analyses directly in your terminal, inspired by the rich Jordanian storytelling tradition.
 
-***
+---
 
 ## Latest version
 
