--- a/src/content/docs/configure/settings.mdx
+++ b/src/content/docs/configure/settings.mdx
@@ -3,7 +3,10 @@ title: Rawi (راوي) Documentation | Configure Settings
 description: Welcome to the comprehensive documentation for Rawi (راوي), a developer-friendly AI-powered CLI tool for your terminal.
 ---
 
+import Clarity from '@/components/clarity.astro';
 import {Tabs, TabItem, Steps} from '@astrojs/starlight/components';
+
+<Clarity />
 
 # Configuration and Credential File Settings in Rawi CLI
 
